--- a/docs/index.html.ejs
+++ b/docs/index.html.ejs
@@ -89,6 +89,28 @@
       </div>
     </div>
 
+    <div class="window theme-lilac" style="margin: 32px; width: 250px">
+      <div class="title-bar">
+        <div class="title-bar-text">
+          My First VB4 Program
+        </div>
+
+        <div class="title-bar-controls">
+          <button aria-label="Minimize"></button>
+          <button aria-label="Maximize"></button>
+          <button aria-label="Close"></button>
+        </div>
+      </div>
+      <div class="window-body">
+        <p>Hello, world!</p>
+        <pre style="margin-block-end: 1em;">Some sunken text...</pre>
+        <section class="field-row" style="justify-content: flex-end">
+          <button>OK</button>
+          <button>Cancel</button>
+        </section>
+      </div>
+    </div>
+
     <p>
       This library relies on the usage of <strong>semantic HTML</strong>. To make a button, you'll need
       to use a <code>&lt;button&gt;</code>. Input elements require labels. Icon buttons rely on
